test/corpus/top_function.txt
=================
top function
==================

do_nothing : Unit = { unit}

---
(source_file
  (function_definition
    (function_declaration
      (local_variable)
      (type_variable
        (local_variable)
      )
    )
    (function_body
      (expression_variable
        (local_variable)
      )
    )

  )
)

